About Us Spacing Fix

--- a/tasty_styles.css
+++ b/tasty_styles.css
@@ -275,7 +275,7 @@ h2 {
 #Goals{
      background: #FFFFFF;
      background: linear-gradient(to right, #161616 #000000);
-     padding: 275px 0;
+     padding: 0px 0;
 }
 #contents__donuts{
 	 display: flex;
@@ -286,7 +286,7 @@ h2 {
      margin: 0 auto;
      height: 90%;
      text-align: center;
-     padding: 30px;
+     padding: 0px;
 }
 
 .Donouts__statement{
@@ -301,12 +301,12 @@ h2 {
   -webkit-text-fill-color: transparent;
   -mo-text-fill-color: transparent;
 }
-.
+
 /*Locations*/
 .Locations{
      background: #FFFFFF;
      background: linear-gradient(to right, #161616 #000000);
-     padding: 200px 0;
+     padding: 0px 0;
 }
 .location__container{
 	 display: flex;
@@ -317,7 +317,7 @@ h2 {
      margin: 0 auto;
      height: 90%;
      text-align: center;
-     padding: 30px;
+     padding: 0px;
 }
 .carousel-container{
 	margin:10px;
